# ToupCameraDemo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  appevent.cpp  appevent.h  appinit.cpp  appinit.h  build.sh  ctoupcamera.cpp  dialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  utils.cpp  utils.h
include/: appevent.h  appinit.h  ccamera.h  connx.h  connxfacepaint.h  connxnaf.h  cserialport.h  ctoupcamera.h  cusbcamera.h  devicemanager.h  dialog.h  dockwidget.h  form.h  imageprocessor.h  mainwindow.h  mythread.h  utils.h
installer/: installer.bat
installer/config/: config.xml
installer/packges/cn.edu.cqut.www/: windeployqt.bat
installer/packges/cn.edu.cqut.www/meta/: installscript.qs  package.xml
modules/cdevice/: CMakeLists.txt  cdeviceConfig.cmake
modules/cdevice/include/: ccamera.h  ctoupcamera.h  cwebsocket.h  cwebsocketclient.h  cwebsocketserver.h  devicemanager.h  utils.h
modules/cdevice/src/: cserialport.cpp  ctoupcamera.cpp  cusbcamera.cpp  cwebsocketclient.cpp  devicemanager.cpp  utils.cpp
modules/connx/: CMakeLists.txt
modules/connx/include/: cedvr.h  cmsvr.h  cmsvsr.h  connx.h  connxfacepaint.h  connxnaf.h  cpicodet.h  crkyolov7.h  cyolov5face.h  cyolox.h  rkyolov7.h  segunet.h
modules/connx/src/: cedvr.cpp  cmsvr.cpp  cmsvsr.cpp  connx.cpp  connxfacepaint.cpp  connxnaf.cpp  cpicodet.cpp  crkyolov7.cpp  cyolov5face.cpp  cyolox.cpp  rkyolov7.cpp  segunet.cpp
modules/cutils/: CMakeLists.txt  cutilsConfig.cmake
src/: appevent.cpp  appinit.cpp  ccamera.cpp  connx.cpp  connxfacepaint.cpp  connxnaf.cpp  ctoupcamera.cpp  cusbcamera.cpp  cwebsocket.cpp  cwebsocketserver.cpp  devicemanager.cpp  dialog.cpp  dockwidget.cpp  form.cpp  imageprocessor.cpp  main.cpp  mainwindow.cpp  utils.cpp
ui/: dialog.ui  dockwidget.ui  form.ui  mainwindow.ui  mainwindow1.ui
